--- a/components/test/style/entry.less
+++ b/components/test/style/entry.less
@@ -1,9 +1,9 @@
 @import "../../style/index";
 @import "../../style/color";
 
-@test2-prefix-cls: ~'@{five-prefix}-test2';
+@test-prefix-cls: ~'@{five-prefix}-test';
 
-.@{test2-prefix-cls} {
+.@{test-prefix-cls} {
     color: @primary-color;
     box-sizing: border-box;
     border: 1px solid red;
